NEWS FILE FOR RMAEXPRESS


CHANGES IN 1.2.0
-----------------

RMAExpress
----------
- Fix a bug that resulted in crash when reading some types of CEL files



RMADataConv
------------
- Remove strict checking of lib_set_version between pgf and clf files when using MPS/PS files. 

- additional probeset types now supported in pgf/clf/MPS conversion




CHANGES IN 1.1.0
----------------


General
-------

- Unified source code between windows, liunx and mac osx builds. Previously mac osx source code changes were not merged into the main code base.

- Now building binaries against wxWidgets-3.0-rc1 for all platforms


RMAExpress
----------
- default format for saving residual images is now jpg

- improved redraw speed when changing between arrays in residual images window

- improved screen redraw speed when scrolling or resizing residual images window

- residuals window supports zooming from 10%-200%


RMADataConv
------------
- Remove strict checking of lib_set_version between pgf and clf files. It appears that there are a number of released pgf/clf file combinations that don't properly match (notably HuGene 2.0, MoGene 2.0)

- clf file parser now forces order=row_major (which is consistent with file format documentation). Note that there do exist released versions of clf files for some array types which contain "order=col_major", but these are incorrect (ie are actually row_major). The effect of this change is that the parser now assumes order=row_major irrespective of what is in the clf file.

- Better support for WTGene 2.0/2.1 and HTA array pgf/clf processing